add get account api
