# api/account.go
@@ -21,15 +21,15 @@ func NewAccountAPI(c *config.Config, l *logger.Logger, s *service.AccountService
 
 // Register godoc
 //
-// @Summary      Register a new account
-// @Description  Register a new account with username and password
-// @Tags         accounts
-// @Accept       json
-// @Produce      json
-// @Param        account body args.AccountRegisterArgs true "username and password"
-// @Success      200 "Account created, return account information"
-// @Failure      400 "Username or password is missing"
-// @Router       /register [post]
+//	@Summary		Register a new account
+//	@Description	Register a new account with username and password
+//	@Tags			accounts
+//	@Accept			json
+//	@Produce		json
+//	@Param			account	body	args.AccountRegisterArgs	true	"username and password"
+//	@Success		200		"Account created, return account information"
+//	@Failure		400		"Username or password is missing"
+//	@Router			/register [post]
 func (api *AccountAPI) Register(g *gin.Context) {
 	c := WrapContext(g)
 
@@ -50,16 +50,16 @@ func (api *AccountAPI) Register(g *gin.Context) {
 
 // Login godoc
 //
-// @Summary      Login to an account
-// @Description  Login to an account with username and password
-// @Tags         accounts
-// @Accept       json
-// @Produce      json
-// @Param        account body args.AccountLoginArgs true "username and password"
-// @Success      200 "Login success, return account information"
-// @Failure      400 "Username or password is missing"
-// @Failure      401 "Username or password is incorrect"
-// @Router       /login [post]
+//	@Summary		Login to an account
+//	@Description	Login to an account with username and password
+//	@Tags			accounts
+//	@Accept			json
+//	@Produce		json
+//	@Param			account	body	args.AccountLoginArgs	true	"username and password"
+//	@Success		200		"Login success, return account information"
+//	@Failure		400		"Username or password is missing"
+//	@Failure		401		"Username or password is incorrect"
+//	@Router			/login [post]
 func (api *AccountAPI) Login(g *gin.Context) {
 	c := WrapContext(g)
 
@@ -76,4 +76,41 @@ func (api *AccountAPI) Login(g *gin.Context) {
 	}
 
 	c.OK(account)
+}
+
+// Account Infomation godoc
+//
+//	@Summary		Get account information
+//	@Description	Get account information with token
+//	@Tags			accounts
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Success		200	"Return account information"
+//	@Failure		401	"Token is incorrect"
+//	@Router			/ [get]
+func (api *AccountAPI) GetAccount(g *gin.Context) {
+	c := WrapContext(g)
+
+	apiToken := c.GetHeader("Authorization")
+	account, err := api.accountService.GetAccountWithToken(apiToken)
+	if err != nil {
+		c.Unauthorized(err)
+		return
+	}
+
+	c.OK(account)
+}
+
+func (api *AccountAPI) AuthMiddleware(g *gin.Context) {
+	c := WrapContext(g)
+
+	apiToken := c.GetHeader("Authorization")
+	_, err := api.accountService.GetAccountWithToken(apiToken)
+	if err != nil {
+		c.Unauthorized(err)
+		return
+	}
+
+	c.Next()
 }
